[package]
name = "embassy_multi_waker_registration"
version = "0.1.0"
edition = "2024"
[dependencies]
defmt = "1.0.1"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-stm32 = { version = "0.2.0", features = [
    "stm32wb55rg",
    "time-driver-any",
    "memory-x",
    "exti",
] }
embassy-sync = { version = "0.6.2", features = [] }
embassy-time = { version = "0.4.0", features = [
    "tick-hz-32_768",
    "generic-queue-8",
] }
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
defmt-rtt = { version = "0.3.0" }
static_cell = { version = "2.1" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

