[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", default-features = false }
defmt = { version = "0.3" }
# my_logic = { path = "../my_logic", features = ["defmt"]}

[dev-dependencies]
# my_logic = { path = "../my_logic", features = ["log"]}

